--- a/index.html
+++ b/index.html
@@ -1,13 +1,1 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8" />
-        <title>Book Store</title>
-         <meta name="description" content="This Is Our Book Store" />
-    </head>
-    <body>
-        <h1>Book Store</h1> 
-        <p>This Is My Book Store, Welcome</p>
-        <a href="https://google.com">google</a>
-    </body>
-</html>
+alert(999)
